# resumex

./: LICENSE  README.md  main.py  pyproject.toml
examples/: resume.yaml
src/resumex/: cli.py
src/resumex/engine/: __init__.py  compiler.py  loader.py  pipeline.py  renderer.py  types.py  validator.py
src/resumex/models/: __init__.py  envelope.py  sections.py
src/resumex/themes/: registry.py
src/resumex/themes_data/default/: theme.yaml
src/resumex/themes_data/default/partials/: header.tex.j2  preamble.tex.j2
src/resumex/themes_data/default/partials/blocks/: bullet_list.tex.j2  heading_1row.tex.j2  subheading_2row.tex.j2  subheading_2row_details.tex.j2
src/resumex/themes_data/default/partials/sections/: education.tex.j2  experience.tex.j2  honors.tex.j2  leadership.tex.j2  projects.tex.j2  skills.tex.j2  summary.tex.j2
src/resumex/themes_data/default/templates/: main.tex.j2
tests/: test_cli.py  test_compiler.py  test_integration.py  test_loader.py  test_renderer.py  test_validation.py
tests/themes/test-theme/: theme.yaml
tests/themes/test-theme/partials/: header.tex.j2  summary.tex.j2
tests/themes/test-theme/templates/: main.tex.j2
